stop continually trying to load the html page as an image using # ... set the loading bg to white to avoid the gray flicker in most cases.

--- a/public/stylesheets/DV/components/pages.css
+++ b/public/stylesheets/DV/components/pages.css
@@ -67,7 +67,7 @@
   top:0;
   -moz-box-shadow: 0 0 1em #a9a9a9;
   -webkit-box-shadow: 0 0 1em #a9a9a9;
-  background-color:#dfdfdf;
+  background-color: #fff;
   overflow:visible;
 }
 
